--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 
 # JELLYFIN_URL=http://your-jellyfin-url 
 # MAX_CONCURRENT_JOBS=1
+
+# File-removal
+# REMOVE_FILE_AFTER_RIGHT_DOWNLOAD=true
+# TIME_TO_KEEP_FILES=8 # Hours. Non-option when REMOVE_FILE_AFTER_RIGHT_DOWNLOAD=false
