--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "tree-kill": "^1.2.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
