--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
     restart: unless-stopped
 
     # If you want to use a local volume for the cache, uncomment the following lines:
-    volumes:
-      - ./cache:/usr/src/app/cache
+    # volumes:
+    #  - ./cache:/usr/src/app/cache
